objects/Products_by_Categories__x.object
<CustomObject>
    <description>Products_by_Categories</description>
    <externalDataSource>NorthwindRead</externalDataSource>
    <externalIndexAvailable>false</externalIndexAvailable>
    <externalName>Products_by_Categories</externalName>
    <fields>
        <fullName>CategoryName__c</fullName>
        <description>CategoryName</description>
        <externalDeveloperName>CategoryName</externalDeveloperName>
        <label>CategoryName</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discontinued__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Discontinued</description>
        <externalDeveloperName>Discontinued</externalDeveloperName>
        <label>Discontinued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <description>ProductName</description>
        <externalDeveloperName>ProductName</externalDeveloperName>
        <label>ProductName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuantityPerUnit__c</fullName>
        <description>QuantityPerUnit</description>
        <externalDeveloperName>QuantityPerUnit</externalDeveloperName>
        <label>QuantityPerUnit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitsInStock__c</fullName>
        <description>UnitsInStock</description>
        <externalDeveloperName>UnitsInStock</externalDeveloperName>
        <label>UnitsInStock</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Products_by_Categories</label>
    <pluralLabel>Products_by_Categories</pluralLabel>
</CustomObject>